tests/snapshots/cli_help__cli_help_attachments.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
A task's files: list, attach, download and delete them. An attachment is named by its number from 1 (as `attachments list` shows them), its ID, or its exact name. Files go by path: the daemon reads and writes them

Usage: ms-todo attachments [OPTIONS] <COMMAND>

Commands:
  list      The task's attachments, numbered from 1, with Microsoft To Do's size for each (a little more than the file's bytes)
  add       Attach files to the task, up to 25 MB each. The daemon reads each file when it sends it, and refuses one that changed after this command
  download  Save the task's attachments into a directory: every one, or those named. A file there is never replaced unless --force: the new one gets a number, as `name (1).pdf`
  delete    Delete attachments. Asks first in a terminal; anywhere else it needs --yes. For a week, `undo` attaches one again from a copy ms-todo keeps; if it can't keep one, nothing is deleted
  help      Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
