tests/snapshots/cli_help__cli_help_attachments_download.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Save the task's attachments into a directory: every one, or those named. A file there is never replaced unless --force: the new one gets a number, as `name (1).pdf`

Usage: ms-todo attachments download [OPTIONS] <TASK> [ATTACHMENT]...

Arguments:
  <TASK>           The task's ID from `tasks list`, or its exact title when --list is given
  [ATTACHMENT]...  The attachments: each its number from 1, its ID, or its exact name [default: all of them]

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --list <NAME|ID>       Look for the task in this list (exact name or ID), which also lets TASK be an exact title
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --out <DIR>            The directory to save into [default: the current directory]
      --force                Replace a file of the same name instead of numbering the new one
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
