tests/snapshots/cli_help__cli_help_auth_bearer.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Print a valid access token for Microsoft Graph, e.g. for curl. With --format table, prints only the token

Usage: ms-todo auth bearer [OPTIONS]

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --reveal-secret        Confirm that the token may be printed. Anyone holding it can act as you until it expires
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
